--- a/AOC2020/AOC2020.csproj
+++ b/AOC2020/AOC2020.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Day10.cs" />
     <Compile Include="Day11.cs" />
     <Compile Include="Day12.cs" />
+    <Compile Include="Day13.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
