--- a/AOC2020/AOC2020.csproj
+++ b/AOC2020/AOC2020.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Day13.cs" />
     <Compile Include="Day14.cs" />
     <Compile Include="Day15.cs" />
+    <Compile Include="Day16.cs" />
+    <Compile Include="Day17.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
