--- a/AOC2020/AOC2020.csproj
+++ b/AOC2020/AOC2020.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Day15.cs" />
     <Compile Include="Day16.cs" />
     <Compile Include="Day17.cs" />
+    <Compile Include="Day18.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
