--- a/AOC2020/AOC2020.csproj
+++ b/AOC2020/AOC2020.csproj
@@ -53,6 +53,8 @@
     <Compile Include="Day17.cs" />
     <Compile Include="Day18.cs" />
     <Compile Include="Day19.cs" />
+    <Compile Include="Day20.cs" />
+    <Compile Include="Day21.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
