Days 22 and 23, removed inheritance from solution class

--- a/AOC2020/AOC2020.csproj
+++ b/AOC2020/AOC2020.csproj
@@ -55,6 +55,8 @@
     <Compile Include="Day19.cs" />
     <Compile Include="Day20.cs" />
     <Compile Include="Day21.cs" />
+    <Compile Include="Day22.cs" />
+    <Compile Include="Day23.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
